@@ -1,3 +1,8 @@
+2007-04-19  Nathan Froyd <froydnj@codesourcery.com>
+
+	* gas/ppc/booke.s: Add tlbsx, tlbsxe.
+	* gas/ppc/booke.d: Update.
+
 2007-04-18  H.J. Lu <hongjiu.lu@intel.com>
 
 	* gas/i386/i386.exp: Add sse4.2 and x86-64-sse4.2.
